<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/titreAuthentifier"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:hint="@string/motDePasse"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/valider"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/boutonAuthentifier"
        android:textSize="22sp" />

</LinearLayout>