<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="331dp"
    android:layout_height="180dp"
    android:layout_marginTop="150dp"
    android:background="@drawable/popupshape"
    android:orientation="vertical">

    <TextView
        android:layout_width="331dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="#007857" />

    <TextView
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:background="@drawable/titlepopupshape"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:text="@string/teteConnection"
        android:textAlignment="gravity"
        android:textColor="#fff"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/whaou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/texteCompte"
        android:textSize="20sp" />

    <Button
        android:id="@+id/seConnecter"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/buttonshape"
        android:text="@string/ouvrirCompte"
        android:textColor="#666666"
        android:textSize="17sp" />

    <Button
        android:id="@+id/fermerSeConnecter"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/buttonshape"
        android:text="@string/fermer"
        android:textColor="#666666"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp" />

</RelativeLayout>