<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/menuRechercheSwitch"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="65dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/separateur" />

    <TextView
        android:id="@+id/affiche1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp" />

    <TextView
        android:id="@+id/TxtNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/texteId"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/DecoNumero"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/buttonshape" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="55dp"
        android:layout_height="27dp"
        android:layout_marginStart="213dp"
        android:layout_marginTop="89dp"
        android:background="@drawable/researchtype"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="87dp"
        android:background="#fff"
        android:src="@drawable/ic_recherche" />

    <TextView
        android:id="@+id/Txtmarque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/texteMarque"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerMarque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="86dp" />

    <TextView
        android:id="@+id/TxtBatiment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/texteBatiment"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerBatiment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginTop="86dp" />

    <TextView
        android:id="@+id/separateur"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/separateur" />

    <TextView
        android:id="@+id/textInfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:text="@string/indicateur"
        android:textSize="17sp" />

    <LinearLayout
        android:id="@+id/scrool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="210dp"
        android:layout_marginRight="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/affiche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:textSize="16sp">


            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/affichebatiment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/scrool2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="210dp"
        android:layout_marginRight="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/dynamique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:textSize="16sp">


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>